--- a/zadatak/zadatak.css
+++ b/zadatak/zadatak.css
@@ -1,37 +1,28 @@
 a[href*="google"]{
             color: green;
         }
-a {
+a[href*="link-group"] {
     color: red;
 }
-p:nth-of-type(2):after,
-p:nth-of-type(3):after {
-  content: "NEW";
-  color: yellow;
+p:nth-of-type(2)::after,
+p:nth-of-type(3)::after {
+    content: " NEW";
+    color: yellow;    
+}
+p:nth-last-child(1):hover {
+    font-style: italic; /* Postavite kurzivni stil */
 }
 
+h3 + p {
+  color: red; 
+}
 
+h3 + p + p {
+  color: blue;
+}
 
-
-
-#second-div p:nth-child(odd) {
+h3 + p + p + p {
   color: red;
 }
-
-#second-div p:nth-child(even) {
-  color: blue;
-  
-
-}
-
-
-
-#paragraph:hover {
-    font-style: italic; 
-	
-.paragraph {
-  position: relative;
-}
-
 
 
